force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/clofor_com_cfs__CASH_BOOK__c.object-meta.xml
<CustomObject>
    <customHelpPage>clofor_com_cfs__page_cashbookOnlineHelp</customHelpPage>
    <label>現金入出</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Cash ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>