force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Account_Number__c</fullName>
    <formula>CASE(RecordType.DeveloperName
, &apos;CashIn&apos;,  clofor_com_cfs__CashPayer__r.AccountNumber 
, &apos;InboundTransactionUSD&apos;, clofor_com_cfs__CashPayer__r.AccountNumber
, &apos;CashOut&apos;,  clofor_com_cfs__CashTo__r.AccountNumber 
, &apos;OutboundTransactionUSD_Currency&apos;, clofor_com_cfs__CashTo__r.AccountNumber
, &apos;&apos;)</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>