force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__ActualPaidToVendorWording__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ActualPaidToVendorWording__c</fullName>
    <label>ACTUAL PAID TO VENDOR WORDING</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>