force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__AdvancedPayCategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AdvancedPayCategory__c</fullName>
    <label>ADVANCED PAYMENT CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PaymentSourceCategory</valueSetName>
    </valueSet>
</CustomField>