force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__AmountAdvancePaidToCashStaffUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountAdvancePaidToCashStaffUSD__c</fullName>
    <label>AMOUNT ADVANCE PAID TO CASH STAFF(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>