force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__BankFrom__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankFrom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK FROM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__BankAccount__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>CASH BOOK</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__BankAccount__c</referenceTo>
    <relationshipLabel>CASH</relationshipLabel>
    <relationshipName>BankFrom</relationshipName>
    <type>Lookup</type>
</CustomField>