force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__CASH_CARRIERSTAFF__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CASH_CARRIERSTAFF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a required field. the staff who carry the cash must be chosen from Contacts.</inlineHelpText>
    <label>CASH STAFF</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CASH</relationshipName>
    <type>Lookup</type>
</CustomField>