force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__CashDescription__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashDescription__c</fullName>
    <label>CASH DESCRIPTION</label>
    <type>TextArea</type>
</CustomField>