force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__CashInDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashInDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH-IN DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>CASH-IN (DEBIT ACCOUNTING CODE)</relationshipLabel>
    <relationshipName>CASHCashInDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>