force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__CashInDifferenceUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashInDifferenceUSD__c</fullName>
    <formula>clofor_com_cfs__TotalAmountOfCashInUSD__c -clofor_com_cfs__ActualAmountCollectedUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASH-IN DIFFERENCE(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>