force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__CashOutDifferenceUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashOutDifferenceUSD__c</fullName>
    <formula>clofor_com_cfs__TotalAmountOfCashOutUSD__c - clofor_com_cfs__ActualAmountPaidUSD__c + clofor_com_cfs__AdditionalAmountPayToStaff__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CASH-OUT DIFFERENCE(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>