force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__CashPayerContact__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashPayerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH PAYER-CONTACT</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.clofor_com_cfs__CashPayer__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CashPayerContact</relationshipLabel>
    <relationshipName>CashPayerContact</relationshipName>
    <type>Lookup</type>
</CustomField>