force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__CashSourceActivityType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashSourceActivityType__c</fullName>
    <label>CASH SOURCE ACTIVITY TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__SourceActivityType</valueSetName>
    </valueSet>
</CustomField>