force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__CashTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH TO</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CASH (CASH TO)</relationshipLabel>
    <relationshipName>CashTo</relationshipName>
    <type>Lookup</type>
</CustomField>