force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__CashVourcherRequestTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CashVourcherRequestTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH VOUCHER REQUEST TO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CashVourcherRequestTo</relationshipName>
    <type>Lookup</type>
</CustomField>