force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__ChiefAccountantFullName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ChiefAccountantFullName__c</fullName>
    <label>CHIEF ACCOUNTANT FULL NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>