force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__DIFFERENCE_AMOUNT_ACTUAL_PAID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DIFFERENCE_AMOUNT_ACTUAL_PAID__c</fullName>
    <formula>clofor_com_cfs__TotalAmount__c  -  clofor_com_cfs__ACTUAL_PAID_TO_VENDOR__c + clofor_com_cfs__AdditionalAmountPayToStaffLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The value is automatically calculated. 
Difference(Total Amount-Paid/Collected)=Total Amount - Actual Paid/Collected + Additional Amount Pay to Staff</inlineHelpText>
    <label>DIFFERENCE(TOTAL AMOUNT-PAID)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>