force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__DIFFERENCE_LEFT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DIFFERENCE_LEFT__c</fullName>
    <formula>clofor_com_cfs__EXPECTED_RETURN_AMOUNT__c  -  clofor_com_cfs__RETURNED_AMOUNT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The value is automatically calculated.
Difference Left=Expected Return Amount-Returned Amount
In case of Difference Left is greater than 0, please comment into Reason for Difference field.</inlineHelpText>
    <label>DIFFERENCE LEFT(EXPECTED-RETURNED)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>