force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__DifferenceLeftUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DifferenceLeftUSD__c</fullName>
    <formula>clofor_com_cfs__ExpectedReturnAmountUSD__c - 	clofor_com_cfs__ReturnedAmountUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIFFERENCE LEFT(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>