force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__Director__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DIRECTOR</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CashDirector</relationshipName>
    <type>Lookup</type>
</CustomField>