force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__ExchangeRateID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExchangeRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXCHANGE RATE ID</label>
    <referenceTo>clofor_com_cfs__MgmtMaster__c</referenceTo>
    <relationshipLabel>CASH</relationshipLabel>
    <relationshipName>CASH</relationshipName>
    <type>Lookup</type>
</CustomField>