force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__ExpectedReturnAmountUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExpectedReturnAmountUSD__c</fullName>
    <formula>clofor_com_cfs__AmountAdvancePaidToCashStaffUSD__c - clofor_com_cfs__ActualAmountPaidUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EXPECTED RETURN AMOUNT(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>