force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__mm_CashInDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_CashInDebitAccountingCode__c</fullName>
    <formula>clofor_com_cfs__CashInDebitAccountingCode__r.Name</formula>
    <label>MAILMERGE CASH-IN DEBIT ACCOUNTING CODE</label>
    <type>Text</type>
</CustomField>