force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__mm_LocalCompanyName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__mm_LocalCompanyName__c</fullName>
    <formula>$Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Company_Name__c</formula>
    <label>Mail Merge Local Company Name</label>
    <type>Text</type>
</CustomField>