force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__OriginalDocument__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OriginalDocument__c</fullName>
    <label>ORIGINAL DOCUMENT</label>
    <type>TextArea</type>
</CustomField>