force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__OutboundBankTransactionID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__OutboundBankTransactionID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OUTBOUND BANK TRANSACTION ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__BankTransaction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Outbound Transaction-Local Currency, Outbound Transaction-USD Currency</value>
        </filterItems>
        <filterItems>
            <field>clofor_com_cfs__BankTransaction__c.clofor_com_cfs__Currency__c</field>
            <operation>equals</operation>
            <valueField>$Source.clofor_com_cfs__Currency__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__BankTransaction__c</referenceTo>
    <relationshipLabel>INBOUND CASH TRANSACTION</relationshipLabel>
    <relationshipName>CASH</relationshipName>
    <type>Lookup</type>
</CustomField>