force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__PayerAddress__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PayerAddress__c</fullName>
    <label>PAYER ADDRESS</label>
    <type>TextArea</type>
</CustomField>