force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__ProcessPayable__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProcessPayable__c</fullName>
    <label>PROCESS PAYABLE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__RECEIVABLE_PAYABLE_PROCESSING</valueSetName>
    </valueSet>
</CustomField>