force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__REASON_FOR_DIFFERENCE_TA__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__REASON_FOR_DIFFERENCE_TA__c</fullName>
    <label>REASON FOR DIFFERENCE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>