force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__RETURNED_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RETURNED_AMOUNT__c</fullName>
    <inlineHelpText>Put the actual returned amount of Cash into Accounting Team.</inlineHelpText>
    <label>RETURNED AMOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>