force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__RollupAmountOutboundDepositLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupAmountOutboundDepositLocal__c</fullName>
    <label>ROLLUP AMOUNT OF OUTBOUND DEPOSIT(LOCAL)</label>
    <summarizedField>clofor_com_cfs__DepositCash__c.clofor_com_cfs__AmountOfOutboundDepositLocalForCash__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__DepositCash__c.clofor_com_cfs__Cash__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>