force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__RollupFMSUnpaidBalOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupFMSUnpaidBalOfSellingLocal__c</fullName>
    <label>ROLLUP FMS UNRECEIVED BAL OF SELL(LOCAL)</label>
    <summarizedField>clofor_com_cfs__ConnectInvoicingAndCash__c.clofor_com_cfs__FMSUnreceivedBalOfSellingLocal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectInvoicingAndCash__c.clofor_com_cfs__Cashbook__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>