force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__RollupKickbackUnpaidBalanceLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupKickbackUnpaidBalanceLocal__c</fullName>
    <label>ROLLUP KICKBACK UNPAID BAL(LOCAL)</label>
    <summarizedField>clofor_com_cfs__ConnectKickabckCash__c.clofor_com_cfs__KickbackUnpaidBalanceLocal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectKickabckCash__c.clofor_com_cfs__Cashbook__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>