force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__RollupOtherUnpaidBalUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupOtherUnpaidBalUSD__c</fullName>
    <label>ROLLUP OTHER UNPAID BAL(USD)</label>
    <summarizedField>clofor_com_cfs__ConnectOtherCash__c.clofor_com_cfs__UnpaidBalOfOtherUSDCash__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectOtherCash__c.clofor_com_cfs__CashID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>