force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__RollupPayslipUnpaidBal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupPayslipUnpaidBal__c</fullName>
    <label>ROLLUP PAYSLIP UNPAID BAL</label>
    <summarizedField>clofor_com_cfs__PayslipCash__c.clofor_com_cfs__UnpaidBalUnpaidBalOfPayslipCash__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__PayslipCash__c.clofor_com_cfs__CashID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>