force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__RollupPIUnpaidBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupPIUnpaidBalanceUSD__c</fullName>
    <label>ROLLUP P/I UNPAID BAL(USD)</label>
    <summarizedField>clofor_com_cfs__ConnectPurchasingInvoiceCash__c.clofor_com_cfs__UnpaidBalancePIUSDForCash__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectPurchasingInvoiceCash__c.clofor_com_cfs__Cashbook__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>