force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__RollupVATAmountSellingInclTax__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupVATAmountSellingInclTax__c</fullName>
    <label>ROLLUP VAT AMOUNT SELLING INCL TAX</label>
    <summarizedField>clofor_com_cfs__VATCash__c.clofor_com_cfs__AmountSellingInclTAXCash__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__VATCash__c.clofor_com_cfs__CashID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>