force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__RollupWMSUnpaidBalOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupWMSUnpaidBalOfBuyingLocal__c</fullName>
    <label>ROLLUP WMS UNPAID BAL OF BUYING(LOCAL)</label>
    <summarizedField>clofor_com_cfs__ConnectBillingCAsh__c.clofor_com_cfs__WMSUnpaidBalOfBuyingLocal__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ConnectBillingCAsh__c.clofor_com_cfs__CashID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>