force-app/main/default/objects/clofor_com_cfs__CASH_BOOK__c/fields/clofor_com_cfs__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmount__c</fullName>
    <label>TOTAL AMOUNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>